k8s/integration/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netskope-integration
  labels:
    environment: integration
    team: sdet
    framework: netskope-sdet
